<resources>
    <string name="app_name">HandoverNewRiderUIs</string>
    <string name="earnings">Earnings</string>
    <string name="history">History</string>
    <string name="delivered">Delivered</string>
    <string name="skipped">Skipped</string>
    <string name="cancelled">Cancelled</string>
    <string name="total_earning">Total Earning</string>
    <string name="check_your_payment_structure">Check your payment structure</string>
    <string name="rate_card">Rate Card</string>
    <string name="guidelines_for_doing_orders">Guidelines for doing orders</string>
    <string name="incentives_amp_bonus"><![CDATA[Incentives & Bonus]]></string>
    <string name="filter">Filter</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_profile">My Profile</string>
    <string name="help">Help</string>
    <string name="rajeev_ranjan">Rajeev Ranjan</string>
    <string name="bike_rider">Bike Rider</string>
    <string name="rajeev_chauk_blue_ford_market_new_delhi">Rajeev Chauk blue ford market New Delhi</string>
    <string name="rating">Rating</string>
    <string name="_4_4">4.4 ⭐️</string>
    <string name="orders">Orders</string>
    <string name="months">Months</string>
    <string name="_12">12</string>
    <string name="_64">64</string>
    <string name="handover_id_card">Handover Id Card</string>
    <string name="documents_amp_details"><![CDATA[Documents & Details]]></string>
    <string name="my_performance">My Performance</string>
    <string name="your_services">Your Services</string>
    <string name="language_settings">Language Settings</string>
    <string name="vehicle_details">Vehicle Details</string>
    <string name="verified">Verified</string>
    <string name="mobile_no">Mobile No.</string>
    <string name="_9932586952">9932586952</string>
    <string name="services">Services</string>
    <string name="instant_delivery">Instant Delivery</string>
    <string name="license_number">License Number</string>
    <string name="up1620200015886">UP1620200015886</string>
    <string name="update_new">Update New</string>
    <string name="share">Share</string>
    <string name="view_declaration">Download declaration</string>
    <string name="zone">Zone</string>
    <string name="payout">Payout</string>
    <string name="payout_for_00_00am_23_59_pm">Payout for 00:00AM- 23:59 PM</string>
    <string name="base_fare">Base Fare</string>
    <string name="_16">₹16</string>
    <string name="minimum_fare">Minimum Fare</string>
    <string name="_20">₹20</string>
    <string name="earning_per_km">Earning per Km</string>
    <string name="every_km_till_3_kms">Every Km till 3 kms</string>
    <string name="_4_km">₹4/km</string>
    <string name="every_km_from_3_to_8_kms">Every Km from 3 to 8 kms</string>
    <string name="_5_4_km">₹5.4/km</string>
    <string name="every_km_from_8_to_12_kms">Every Km from 8 to 12 kms</string>
    <string name="_6_5_km">₹6.5/km</string>
    <string name="every_km_above_12_kms">Every Km above 12 kms</string>
    <string name="_7_5_km">₹7.5/km</string>
    <string name="price_per_minute">Price per minute</string>
    <string name="_0_8">₹0.8</string>
    <string name="platform_charges">Platform Charges</string>
    <string name="_18">18%</string>
    <string name="pickup_extra_km_fare_post_2_km_max_12">Pickup Extra Km Fare post 2 km (Max ₹ 12)</string>
    <string name="more_info">More info</string>
    <string name="guidelines">Guidelines</string>
    <string name="rules_to_follow_to_be_a_handover_rider_and_receive_more_orders">Rules to follow to be a Handover rider and receive more orders</string>
    <string name="behaviour_and_professionalism">Behaviour and Professionalism</string>
    <string name="avoid_using_bad_professional_language_with_customers">Avoid using bad/professional language with customers.</string>
    <string name="never_demand_extra_money_and_return_the_change_to_the_customers">-Never demand extra money and return the change to the customers.</string>
    <string name="don_t_force_the_customer_to_cancel_the_ride_if_they_choose_to_pay_online">-Don’t force the customer to cancel the ride if they choose to pay online.</string>
    <string name="don_t_make_unnecessary_contacts_with_the_customer_before_and_after_the_trip">-Don’t make unnecessary contacts with the customer before and after the trip</string>
    <string name="driving_and_navigation">Driving and Navigation</string>
    <string name="follow_speed_limit_and_don_t_engage_in_fast_rash_riding">-Follow speed limit and don’t engage in fast/rash riding</string>
    <string name="arrive_at_the_correct_pickup_point_and_drop_at_right_location">-Arrive at the correct pickup point and drop at right location.</string>
    <string name="follow_the_route_shown_in_the_app_and_always_keep_your_gps_on">-Follow the route shown in the app and always keep your GPS on.</string>
    <string name="cleanliness_and_hygiene">Cleanliness and Hygiene</string>
    <string name="maintain_cleanliness_and_groom_yourself">-Maintain cleanliness and groom yourself.</string>
    <string name="note_you_will_be_deactivated_if_you_fail_to_adhere_to_the_above_guidelines">Note: You will be deactivated if you fail to adhere to the above guidelines.</string>
    <string name="want_to_know_more_about_payments">Want to know more about Payments?</string>
    <string name="_1_base_fare">1. Base Fare:</string>
    <string name="the_base_amount_upon_which_distance_fare_and_time_fare_is_added_for_every_order_you_will_receive_base_fare_ride_distance_price_per_km_ride_time_price_per_min">The base amount upon which distance fare and time fare is added. For every order you will receive Base fare+ ride distance*Price per km + ride time * Price per min</string>
    <string name="_2_minimum_fare">2. Minimum Fare:</string>
    <string name="the_minimum_amount_you_would_receive_per_order">The minimum amount you would receive per order.</string>
    <string name="_3_price_per_minute">3. Price per minute</string>
    <string name="the_ride_time_amount_earned_per_minute">The ride time amount earned per minute.</string>
    <string name="_4_platform_charges">4. Platform Charges:</string>
    <string name="amount_you_would_be_charged_per_order_for_handover_services">Amount you would be charged per order for handover services.</string>
    <string name="extra_amount_you_would_receive_if_pickup_distance_exceed_2_km_you_will_be_paid_extra_only_for_the_distance_travelled_beyond_2_km">Extra amount you would receive if pickup distance exceed 2 km. You will be paid extra only for the distance travelled beyond 2 km.</string>
    <string name="_5_pickup_extra_km_fare_post_2_km_max_12"><font color="#000000"> 5. Pickup Extra Km Fare post 2 km </font><font color="#686868">(Max ₹12):</font></string>
    <string name="you_will_be_paid_only_as_per_the_route_given_by_rapido">You will be paid only as per the route given by Rapido.</string>
    <string name="you_might_not_receive_the_bonus_amount_if_you_are_involved_in_any_fraud_and_additionally_you_will_be_penalized">You might not receive the bonus amount if you are involved in any fraud, and additionally you will be penalized.</string>
    <string name="rider_denied_duties_cancellations_asking_the_customers_for_extra_cash_are_strictly_not_acceptable">Rider denied duties, cancellations, asking the customers for extra cash are strictly not acceptable.</string>
    <string name="ok_got_it">Ok, Got It</string>
    <string name="documents_details">Documents &amp; Details</string>
    <string name="driving_license">Driving License</string>
    <string name="aadhar">Aadhar</string>
    <string name="address">Address</string>
    <string name="app_language">App Language</string>
    <string name="set_the_language_for_your_app">Set the language for your app</string>
    <string name="notification_language">Notification Language</string>
    <string name="phone_number">Phone Number</string>
    <string name="package_details">Package Details</string>
    <string name="package_weight"><font coler="#000000">Select Package Weight</font><font color="#686868">*</font></string>
    <string name="package_includes"><font coler="#000000">Does Package Includes</font><font color="#686868">*</font></string>
    <string name="cake">Cake</string>
    <string name="ice_cream">Ice Cream</string>
    <string name="tea">Tea</string>
    <string name="order_value"><font coler="#000000">Order Value</font><font color="#686868">*</font></string>
    <string name="enter_order_value">Enter Order Value</string>
    <string name="collect_payment_for_order">Collect Payment for Order</string>
    <string name="add_photos_of_package"><font coler="#000000"><b>Add package photos</b></font><font color="#686868"><font size="8">(Optional)</font></font></string>
    <string name="eg_laundry_food_boxes_etc">Eg. Laundry, Food boxes, etc.</string>
    <string name="submit">Submit</string>
    <string name="select_package_category"><font coler="#000000">Select Package Category</font><font color="#686868">*</font></string>
    <string name="splash_screen"><font color="#0000000"> <b>No monthly fixed cost</b>  of </font><font color="#000000"> \n    delivery person &amp;vehicle.</font></string>
    <string name="add_package_photos">Add Package Photos</string>
    <string name="maximum_5_photos">Maximum 5 photos</string>
    <string name="uploaded_photos_of_package">Uploaded photos of package</string>
    <string name="new_order_arrived">New Order Arrived!</string>
    <string name="earning_42_16"><font coler="#686868">Earning</font><font color="#0F6FB5">\n₹42.16</font></string>
    <string name="distance_3_82km"><font coler="#686868">Distance:</font><font color="#0F6FB5">\n3.82km</font></string>
    <string name="type_bike"><font coler="#686868">Type:     </font><font color="#0F6FB5">\nBike</font></string>
    <string name="food_delivery">FOOD DELIVERY</string>
    <string name="pick_up">Pick Up</string>
    <string name="haldiram_s_pvt_ltd">Haldiram’s PVT LTD</string>
    <string name="sd_138b_ahinsa_khand_1_jaipuria_service_road_indirapuram_ghaziabad">SD-138B, Ahinsa Khand 1, Jaipuria Service Road, Indirapuram, Ghaziabad</string>
    <string name="drop">Drop</string>
    <string name="skip">Skip</string>
    <string name="accept">Accept</string>
    <string name="business_category">Business Category</string>
    <string name="select_your_business_category">Select your business category</string>
    <string name="handover">Handover</string>
    <string name="account_verification">Account Verification</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="i_have_read_terms_privacy_policy_of_handover"><font coler="#494949"> I have read</font><font color="#256FFF"> Terms &amp; Privacy </font><font color="#494949"> of \nHandover</font></string>
    <string name="otp_verification">OTP Verification</string>
    <string name="otp">OTP</string>
    <string name="enter_the_6_digit_otp_sent_to">Enter the 6-digit OTP sent to</string>
    <string name="_98735_33376">98735 33376</string>
    <string name="business_details">Business Details</string>
    <string name="authorize_signatory">Authorize Signatory</string>
    <string name="authorize_signatory_name">Authorize Signatory Name</string>
    <string name="enter_authorize_signatory_name">Enter authorize signatory name</string>
    <string name="authorize_signatory_number">Authorize Signatory Number</string>
    <string name="enter_authorize_signatory_number">Enter authorize signatory number</string>
    <string name="business_type">Business Type</string>
    <string name="business_name">Business Name</string>
    <string name="enter_business_name">Enter business name</string>
    <string name="brand_name">Brand Name</string>
    <string name="enter_brand_name">Enter brand name</string>
</resources>